<resources>
    <string name="app_name">WineVaultApp</string>
    <string name="action_settings">Settings</string>
    <string name="wine_has">ВИНО В НАЛИЧИИ</string>
    <string name="reminder">НАПОМИНАНИЯ</string>
    <string name="get_high">ПРИХОД</string>
    <string name="consumption">РАСХОД</string>
    <string name="circle">circle</string>
    <string name="dashboard_img">dashboard_img</string>
    <string name="dashboard">ДАШБОРД</string>
    <string name="amount_all_wine">8 967</string>
    <string name="all_wine">ВСЕГО БУТЫЛОК</string>
    <string name="box_ic">box_ic</string>
    <string name="wine_ic">wine_ic</string>
    <string name="amount_wine">7 853</string>
    <string name="amount_box">24</string>
    <string name="calendar">calendar</string>
    <string name="small_text">Small Text</string>
    <string name="box_ic_in_list">box_ic</string>
    <string name="add_some">+2</string>
    <string name="wine_in_list">wine _in_list</string>
    <string name="add_wine">+100</string>
    <string name="data_in_list">02.10.15 11:00</string>
    <string name="wine_in_r">wine_in_r</string>
    <string name="amount_wine_r">2</string>
    <string name="domaines_barons">Domaines Barons</string>
    <string name="text_secondary_r">На подарок</string>
    <string name="data_in_acc">02.10.15</string>
    <string name="title_activity_sign_in">WineVault</string>
    <string name="str">-1</string>
    <string name="str2" />
    <string name="str3" />
    <string name="str4" />
    <string name="signin">НАЧАТЬ РАБОТУ</string>
    <string name="str_w">НАЧАТЬ РАБОТУ</string>
    <string name="add_b">ДОБАВИТЬ НОВОЕ ВИНО</string>
    <string name="add_but">add_b</string>
    <string name="statistic">СТАТИСТИКА</string>
    <string name="target">НАВИГАЦИЯ</string>
    <string name="wine">ВИНО</string>
    <string name="bell">НАПОМИНАНИЯ</string>
    <string name="news">НОВОСТИ</string>
    <string name="dash">ДАШБОРД</string>
    <string name="dashboard_name">ДАШБОРД</string>
    <string name="name">Винный погреб</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="bad">Логин или пароль неверен</string>
</resources>
