<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_amount"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_weight="100"
    android:layout_marginBottom="@dimen/window_indent"
    android:id="@+id/wine_layout">

    <!---->
    <TextView
        android:layout_marginTop="8.5dp"
        android:layout_marginLeft="@dimen/header_indent_left"
        android:textColor="@color/background_color_white"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wine_has"
        android:id="@+id/textView_wine_has" />

    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">

        
    <TextView
        android:layout_marginTop="@dimen/top_indent_amount_wine"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:text="@string/amount_all_wine"
        android:id="@+id/amount_all_wine"
        android:layout_centerVertical="true"
        android:textStyle="normal" />

        <View

            android:layout_width="20dp"
            android:layout_height="80dp"
            android:background="@drawable/accentuation_vertical"
            android:id="@+id/line_vertical"
            android:layout_alignBottom="@+id/image_wine"
            android:layout_centerHorizontal="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/all_wine"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/all_wine"
        android:layout_below="@+id/amount_all_wine"
        android:layout_alignLeft="@+id/amount_all_wine"
        android:textStyle="bold" />

        
        <ImageView
            android:layout_marginLeft="30dp"
            android:src="@mipmap/ic_box"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/image_box"
            android:layout_alignTop="@+id/amount_all_wine"
            android:layout_toRightOf="@+id/amount_all_wine"
            android:contentDescription="@string/box_ic" />

       
        <ImageView
        android:src="@mipmap/ic_wine_bottle"
        android:layout_width="35dp"
        android:layout_height="44dp"
        android:id="@+id/image_wine"
        android:contentDescription="@string/wine_ic"
        android:layout_alignBottom="@+id/all_wine"
        android:layout_alignRight="@+id/image_box"
        android:layout_alignEnd="@+id/image_box" />

        
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28dp"
            android:text="@string/amount_wine"
            android:id="@+id/text_amount_wine_2"
            android:layout_alignBottom="@+id/image_wine"
            android:layout_toRightOf="@+id/image_wine"/>


        <View

            android:layout_width="95dp"
            android:layout_height="10dp"
            android:background="@drawable/accuntuation_horizontal"

            android:id="@+id/line_gorizontal"
            android:layout_above="@+id/text_amount_wine_2"
            android:layout_toRightOf="@+id/image_wine"
            android:layout_toEndOf="@+id/image_wine" />


        <TextView
            android:paddingLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/amount_box"
            android:id="@+id/text_amount_box"
            android:textSize="28dp"
            android:layout_alignTop="@+id/image_box"
            android:layout_alignLeft="@+id/text_amount_wine_2" />

    </RelativeLayout>
</RelativeLayout>
