<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_g_wine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

<RelativeLayout


    android:background="@color/background_color_white"
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    android:layout_centerHorizontal="true"


    android:id="@+id/get_wine">

    <ImageView
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4.5dp"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:src="@mipmap/ic_calendar"
        android:id="@+id/image_calendar"
        android:contentDescription="@string/calendar" />

    <TextView
        android:layout_marginTop="6.5dp"
        android:layout_marginLeft="19.5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_main_in_list_view"
        android:text="@string/data_in_acc"
        android:id="@+id/text_data_g_w"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />


    <TextView
        android:layout_marginTop="19dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"

        android:textSize="6dp"
        android:text="@string/small_text"
        android:id="@+id/info_text_g_w"

        android:layout_alignStart="@id/image_calendar"
        />


    <View
        android:layout_marginTop="36.5dp"
        android:layout_marginBottom="5dp"

        android:id="@+id/colored_bar"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:background="@color/background_light"

        android:layout_alignStart="@id/image_calendar"
        android:layout_alignParentBottom="true"/>


    <ImageView

        android:layout_marginBottom="5dp"
        android:layout_width="@dimen/box_ic_size"
        android:layout_height="@dimen/box_ic_size"
        android:src="@mipmap/ic_box"
        android:id="@+id/image_box_l"

        android:layout_alignStart="@id/image_calendar"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/box_ic_in_list" />

    <TextView
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="3.5dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/background_color_yellow"
        android:textSize="@dimen/header_size"
        android:text="@string/add_some"
        android:id="@+id/plus_box_g_w"
        android:layout_alignBottom="@+id/colored_bar"
        android:layout_toEndOf="@+id/image_box_l" />


    <View
        android:layout_marginTop="36.5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"

        android:id="@+id/colored_bar_next"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:background="@color/background_light"

        android:layout_toEndOf="@+id/colored_bar"
        android:layout_alignParentBottom="true"/>




    <ImageView
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="@dimen/box_ic_size"
        android:layout_height="@dimen/box_ic_size"
        android:src="@mipmap/ic_wine_bottle"
        android:id="@+id/image_wine"

        android:layout_toEndOf="@+id/colored_bar"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/wine_in_list" />


    <TextView
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="3.5dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/background_color_yellow"
        android:textSize="@dimen/header_size"
        android:text="@string/add_wine"
        android:id="@+id/plus_wine_g_w"
        android:layout_alignBottom="@+id/colored_bar"
        android:layout_toEndOf="@+id/image_wine" />



</RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>