<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <android.support.v7.widget.CardView
        android:id="@+id/card_view_lost_w"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">
        
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@color/background_color_white">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/data_in_list"
            android:id="@+id/text_data_r"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="35dp"
            android:layout_height="45dp"
            android:id="@+id/image_wine_r"
            android:src="@mipmap/ic_wine_bottle"
            android:contentDescription="@string/wine_in_r"
            android:layout_below="@+id/text_data_r"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            style="@android:style/TextAppearance.Medium"
            android:text="@string/amount_wine_r"
            android:id="@+id/text_amount_wine_r"
            android:textStyle="bold"
            android:layout_alignTop="@+id/text_main_in_r"
            android:layout_toRightOf="@+id/image_wine_r"
            android:layout_toEndOf="@+id/image_wine_r" />

        
        <TextView
            android:layout_marginLeft="22dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/domaines_barons"
            android:id="@+id/text_main_in_r"
            android:ellipsize="end"
            android:singleLine="true"
            android:textStyle="bold"
            android:layout_marginStart="22dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/text_amount_wine_r"
            android:layout_toEndOf="@+id/text_amount_wine_r" />


        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_secondary_r"
            android:id="@+id/secondary_text_in_r"
            android:textStyle="italic"
            android:layout_below="@+id/text_amount_wine_r"
            android:layout_alignLeft="@+id/text_main_in_r"
            android:layout_alignStart="@+id/text_main_in_r" />

    </RelativeLayout>
        
    </android.support.v7.widget.CardView>
    
    </LinearLayout>
